# Chess-engine

./: .gitignore  README.md  head.html  index.html  meson.build
include/: attack.hpp  bishop.hpp  chessboard.hpp  game.hpp  king.hpp  knight.hpp  material.hpp  pawn.hpp  queen.hpp  rook.hpp  square.hpp
resources/: head.html  testFEN.txt
src/: attack.cpp  bishop.cpp  chessboard.cpp  game.cpp  king.cpp  knight.cpp  main  main.cpp  material.cpp  pawn.cpp  queen.cpp  rook.cpp  square.cpp
